# AugustCredits

./: .gitattributes  .gitignore  README.md  cspell.json
backend/: .env.example  Cargo.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: auth.rs  blockchain.rs  config.rs  database.rs  error.rs  gateway.rs  main.rs  metering.rs  metrics.rs  middleware_auth.rs  models.rs  proxy.rs  worker.rs
contracts/: august.toml  deploy.aug
contracts/src/: billing.aug  metering.aug  payments.aug
contracts/tests/: billing_test.aug  metering_test.aug  payments_test.aug
